# newsletter_ai

./: README.md  pyproject.toml  test.html
log/: 2024-10-10_15-10-33_edit_task.md  2024-10-10_15-10-33_newsletter_task.html  2024-10-10_15-10-33_research_task.md
logs/: 2024-10-11_17-28-17_edit_task.md  2024-10-11_17-28-17_newsletter_task.html  2024-10-11_17-28-17_research_task.md  2024-10-11_17-40-00_edit_task.md  2024-10-11_17-40-00_newsletter_task.html  2024-10-11_17-40-00_research_task.md  2024-10-11_17-44-53_edit_task.md  2024-10-11_17-44-53_newsletter_task.html  2024-10-11_17-44-53_research_task.md  2024-10-11_17-49-22_research_task.md  2024-10-11_19-05-14_edit_task.md  2024-10-11_19-05-14_newsletter_task.html  2024-10-11_19-05-14_research_task.md  2024-10-11_19-48-44_edit_task.md  2024-10-11_19-48-44_newsletter_task.html  2024-10-11_19-48-44_research_task.md  2024-10-11_19-53-37_edit_task.md  2024-10-11_19-53-37_newsletter_task.html  2024-10-11_19-53-37_research_task.md  2024-10-14_10-15-50_edit_task.md  2024-10-14_10-15-50_newsletter_task.html  2024-10-14_10-15-50_research_task.md  2024-10-14_10-33-24_edit_task.md  2024-10-14_10-33-24_newsletter_task.html  2024-10-14_10-33-24_research_task.md  2024-10-14_10-46-02_edit_task.md  2024-10-14_10-46-02_newsletter_task.html  2024-10-14_10-46-02_research_task.md  2024-10-14_11-04-44_research_task.md  2024-10-14_11-11-33_edit_task.md  2024-10-14_11-11-33_newsletter_task.html  2024-10-14_11-11-33_research_task.md  2024-10-14_11-29-37_edit_task.md  2024-10-14_11-29-37_newsletter_task.html  2024-10-14_11-42-58_edit_task.md  (+36 more)
(+2 files in other folders)
